--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@ body{
 }
 .flexible-container{
     display: flex;
+    margin-bottom: 50px;
 }
 h1{
     font-size: 50px;
+    font-weight: 700px;
 }
 .color{
     color: orange;
