--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .flexible-container{
     display: flex;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
 h1{
     font-size: 50px;
@@ -14,6 +14,10 @@ h1{
 }
 .pro{
     width: 50%;
+    margin-left: 15px;
+}
+.pro img{
+    width: 90%;
 }
 .link-btn{
     text-decoration: none;
@@ -22,4 +26,7 @@ h1{
     font-weight:700;
     padding:5px 10px;
     border-radius: 5px;
+}
+p{
+    text-align: justify;
 }
